Add Game component

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,5 +20,5 @@ code {
 
 @font-face {
   font-family: Minecraft;
-  src: url(../fonts/MinecraftTen-VGORe.ttf);
+  src: url(../fonts/Monocraft.ttf);
 }
