--- a/src/styles/GameHeader.css
+++ b/src/styles/GameHeader.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  z-index: 1;
 }
 .logo {
   font-family: "Minecraft";
@@ -27,6 +28,11 @@
 .target-icons {
   display: flex;
   gap: 25px;
+}
+
+.target-icon {
+  width: 50px;
+  height: 60px;
 }
 
 .square {
