--- a/src/styles/GameHeader.css
+++ b/src/styles/GameHeader.css
@@ -31,12 +31,9 @@
 }
 
 .target-icon {
-  width: 50px;
+  width: 60px;
   height: 60px;
-}
-
-.square {
-  background-color: aqua;
-  width: 50px;
-  height: 50px;
+  background-color: rgb(68, 68, 68);
+  border-radius: 8px;
+  padding: 2px 2px;
 }
