--- a/src/styles/GameOver.css
+++ b/src/styles/GameOver.css
@@ -38,7 +38,8 @@
   gap: 24px;
 }
 
-.button-group button {
+.button-group button,
+.submit-button {
   color: white;
   font-family: "Minecraft";
   background-color: transparent;
@@ -56,6 +57,32 @@
   transition: all 0.3s;
 }
 
-.button-group button:hover {
+.button-group button:hover,
+.submit-button:hover {
   transform: scale(1.05);
+}
+
+#leaderboard-input {
+  border-radius: 24px;
+  border-width: 4px;
+  border-color: white;
+  color: white;
+  padding: 12px;
+  background-color: transparent;
+  font-family: "Minecraft";
+  font-size: 20px;
+  outline: none;
+
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.error {
+  font-size: 14px;
 }
